@@ -10,6 +10,10 @@
 		</member>
 		<member name="LOW_MEMORY" displayname="Optimize for Low Memory Usage">
 		</member>
+		<member name="USE_HOARD_ALLOCATOR" displayname="Use the Hoard Memory Allocator instead of the default system one">
+			<defaultenabled>no</defaultenabled>
+			<depend>hoard</depend>
+		</member>
 		<member name="LOTS_OF_SPANS" displayname="More than 32 DAHDI spans">
 		</member>
 		<member name="RADIO_RELAX" displayname="Relax DTMF for Radio Applications">
